@@ -2,8 +2,8 @@ AUX spectrum.cfg 4770 RMD160 1dfba51b4c4ee6f991b3082a8cf4f4b0234cf8b0 SHA1 c321c
 AUX spectrum.confd 157 RMD160 dec3aebc84f379e42faf6760dc0524b960541f4c SHA1 7894af53b8aebf457a4d5de81ffee35843563d01 SHA256 5f1c7a7c614ffb15ba64caadd560088cf3a8032f3973489a31f65c89ce286c85
 AUX spectrum.initd 548 RMD160 ea5bbfdec4c71f1e6bbf3ef04b0b0b961803bbee SHA1 2cf0114bb19c22a92bd78e7396419472c4da6d17 SHA256 8e6d6c07ecf14c458abe9ab42d959b333a95a6dc199e0839b8df63bd8b404d01
 AUX spectrum.symlink.cfg 4855 RMD160 8e4cf7ab0237dfff0f713a32e37d2630af777273 SHA1 22a17ecc225fe6a9237947c35126b32c0f3a9447 SHA256 3dfb88f041ae3a835241ea4c128ce6958a95f944534349aebdb56d9d74efe1f3
-DIST spectrum-1.4.5.tar.gz 228739 RMD160 263896184b7a1bad1821277f788bbeab0e7a14f6 SHA1 9065a38a5d2bbb413e9fda06d6bab0c8cc41e315 SHA256 334e0321b6446e053d4fb42d585d94227d0f29df6269acaf2d0480413f9496cc
-EBUILD spectrum-1.4.5.ebuild 3666 RMD160 160c16045c2d390fde6904094c47ad4d63306b31 SHA1 a19d8ab85217469fc7eb9ad82145e364552d93c8 SHA256 74cfaf822902bae3fea16371827c1894ee82946fdf9a1058098c198c3c80deb7
+DIST spectrum-1.4.6.tar.gz 228874 RMD160 1e39e779451ac9e73d59b59075b09a9644197b2d SHA1 677b3e67b5267f1379ebb119b7b44ee340a3ece5 SHA256 02ed75ad6ebb6d971891cfe802e040cac55ac0a4c4a9263d4b69b51afce6a4ec
+EBUILD spectrum-1.4.6.ebuild 3666 RMD160 9d00264817839f8003591b1221c7705edf196093 SHA1 85f02b62a203c10ebd354064fbc69a00b40f5ca4 SHA256 cbacb4bd4f24db094b44eaec7fb3ee1b0a4ea106e7ff56f62b0a92a35b8c3c0e
 EBUILD spectrum-9999.ebuild 3649 RMD160 b1737f669c676b9d1dbe3bf617567620f6a1e628 SHA1 203c78413dc0995b3e11fce4504aff678dea961a SHA256 4a62bbaff3f55e099a7ef2e9be94f890866bb52a6d288073f03062f22a403b12
-MISC ChangeLog 880 RMD160 3f377a06e9f0597ef196e85cea51bc0741043f08 SHA1 8974b01f72fd4239692f910a40ca35d0c6273f29 SHA256 91996d3e3120695b80daea62517fabbbaf6bdd6dd61743d9ba120a98ef44dc78
+MISC ChangeLog 1016 RMD160 215b407467ac44c40095525e0d87f8e91c43d1c4 SHA1 6aa61a999a54d515699818dbb2b85ba4150fde51 SHA256 aa61032f586cf51dba51b76cd02bcecc739ae8e168436a53e9f2b2919ca3d950
 MISC metadata.xml 345 RMD160 08be5a1d94c618f914ba47a3a37187ad47f8b874 SHA1 62e8a527557d1607a80907263ff4f3f14b21380f SHA256 992720606c40a0cdf873a1776cea81e967e0578af4b538008ffb4f2b6a2e819c
