@@ -1,6 +1,12 @@
 # ChangeLog for net-im/spectrum
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*spectrum-1.4.6 (15 Jan 2011)
+
+  15 Jan 2011; Rion <rion4ik@gmail.com> -spectrum-1.4.5.ebuild,
+  +spectrum-1.4.6.ebuild:
+  new version
 
 *spectrum-1.4.5 (29 Dec 2010)
 
